Fix #1172 - call built-in bootstrap function color-yiq for showing contrasted text-color.

--- a/oscm-portal/WebContent/marketplace/scss/mp.scss
+++ b/oscm-portal/WebContent/marketplace/scss/mp.scss
@@ -834,8 +834,8 @@ table.smallPanel {
 }
 
 /* current subscriptton status wrapper (ready/error/pending)*/
-.subscriptionStatus {
-
+.subscriptionStatus:hover {
+    color: color-yiq($theme_table_hover_color);
 }
 
 /* show for subscription errors */
@@ -858,6 +858,9 @@ table.smallPanel {
   color: $color_dusty_gray_approx;
 }
 
+.subscriptionPending:hover, .serverSubscriptionSuspended:hover, .subscriptionWaitingForApproval:hover, .subscriptionPendingUpd:hover {
+  color: color-yiq($theme_table_hover_color) !important;
+}
 .provisioningProgress {
   margin-top: 10px;
   background: transparent $info no-repeat;
